--- a/blog.html
+++ b/blog.html
@@ -32,17 +32,26 @@
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Visits to the Pantheon (a six minute walk from my school), Spanish Steps, Piazza Navona, Trevi Fountain (currently under rennovation), Vatican Museums, and St. Peter's Basillica, farmer's markets </p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• An Italian cooking class (we made fresh pasta) </p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Lots of pizza lunches and dinners and gelato</p>
+
 			<br>
+
 			<p>&nbsp;&nbsp;&nbsp;Things I've learned about Rome:</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Coffee on the go is NOT a thing here although a few places advertise "American Coffe To-Go" so I've had to get used to downing a quick caffè (espresso shot) or caffè americano (much smaller version of my usual americano)</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Long walks on cobblestone streets cause pain in all parts of your body (especially feet)</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• You will stumble upon ruins during nearly any given walk</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Gelato is not the same everywhere!</p>
 
-			<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
+			<!---<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
 				<img src="forblog/IMG_6750.jpg" width="480" height="600" alt="passport"/>
 			</span>
 			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
 				<img src="forblog/IMG_6771.jpg" width="480" height="600" alt="fiumeday" />
-			</span>
-			<br>
+			</span>-->
+
+			<div class="col span_3_of_3">
+			<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
+		</div>
+
+
+</body>
+</html>
