--- a/blog.html
+++ b/blog.html
@@ -37,12 +37,48 @@
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• You will stumble upon ruins during nearly any given walk</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Gelato is not the same everywhere!</p>
 
-			<!---<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
-				<img src="forblog/IMG_6750.jpg" width="480" height="600" alt="passport"/>
+			<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
+				<img src="forblog/long.jpg" width="100%" height="auto" alt="passport"/>
 			</span>
 			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
-				<img src="forblog/IMG_6771.jpg" width="480" height="600" alt="fiumeday" />
-			</span>-->
+				<img src="forblog/long-3.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-2.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-4.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-5.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-6.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-7.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-8.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-9.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-10.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-11.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-12.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-13.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
+			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
+				<img src="forblog/long-14.jpg" width="100%" height="auto" alt="fiumeday" />
+			</span>
 
 			<div class="col span_3_of_3">
 			<h4>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h4>
