--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
         <title>Janna Golden</title>
 	</head>
 
@@ -37,7 +39,7 @@
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• You will stumble upon ruins during nearly any given walk</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Gelato is not the same everywhere!</p>
 
-			<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
+			<!---<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
 				<img src="forblog/long.jpg" width="100%" height="auto" alt="passport"/>
 			</span>
 			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
@@ -48,7 +50,7 @@
 			</span>
 			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
 				<img src="forblog/long-4.jpg" width="100%" height="auto" alt="fiumeday" />
-			</span>
+			</span>-->
 			<!--<span style="float:right; width:40%; margin-left:6em; padding-bottom:1em">
 				<img src="forblog/long-5.jpg" width="100%" height="auto" alt="fiumeday" />
 			</span>
