--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><!--chrome=1-->
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
         <title>Janna Golden</title>
 	</head>
 
@@ -27,11 +29,11 @@
 					<h2>•about me•</h2>
 				</div>
 				<br>
-				<div class="col span_1_of_3">
+				<!--<div class="col span_1_of_3">
 					<a class="shrink" href="404.html"><img src="berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
 					<h3>•education and projects•</h3>
 				</div>
-				<br>
+				<br>-->
 				<div class="col span_1_of_3">
 					<a class="shrink" href="blog.html"><img src="roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
 					<h4>•travels abroad•</h4>	
