--- a/school.html
+++ b/school.html
@@ -3,11 +3,13 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
         <title>Janna Golden</title>
 	</head>
 
 	<body>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="schoolstyle.css">
 		<h1>JANNA GOLDEN</h1>
 
 		<div class="section group">
@@ -18,3 +20,11 @@
 				<a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
 			</div>
 		</div>
+
+	<div class="col span_3_of_3">
+			<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
+		</div>
+
+
+</body>
+</html>
