--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
-		<link rel="shortcut icon" href="favicon!.ico">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><!--chrome=1-->
-		<!--<link rel="icon" href="favicon!.ico" type="image/x-icon">-->
-        <title>Janna Golden</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Janna Golden</title>
+		<link rel="shortcut icon" href="favicon1.ico">
+		<!---<link rel="shortcut icon" href="favicon!.ico" type="image/x-icon">
+		<link rel="icon" href="favicon!.ico" type="image/x-icon">-->
+        
 	</head>
 
 	<body>
