--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <title>Janna Golden</title>
 	</head>
 
@@ -29,7 +29,7 @@
 
 		<div class="person1" style="float:left; display:inline-block; ">
 			<span style="float:left;width:20%; margin-left:10em; padding-bottom:1em">
-				<img src="senior.jpg" width="320" height="480" />
+				<img src="images/senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:40%; align: left; margin-right:10em;">
 				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
