--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Janna Golden</title>
-		<link rel="shortcut icon" href="favicon1.ico">
+		<link rel="shortcut icon" href="images/favicon.ico">
 		<!---<link rel="shortcut icon" href="favicon!.ico" type="image/x-icon">
 		<link rel="icon" href="favicon!.ico" type="image/x-icon">-->
         
@@ -27,7 +27,7 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="jump!.jpg" alt="me!" width="35%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="images/jump!.jpg" alt="me!" width="35%" height="auto" /></a>
 					<h2>•about me•</h2>
 				</div>
 				<br>
@@ -37,7 +37,7 @@
 				</div>
 				<br>-->
 				<div class="col span_1_of_3">
-					<a class="shrink" href="blog.html"><img src="roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
+					<a class="shrink" href="blog.html"><img src="images/roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
 					<h4>•travels abroad•</h4>	
 				</div>
 				<br>
