--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Janna Golden</title>
-		
-		<!---<link rel="shortcut icon" href="favicon!.ico" type="image/x-icon">
-		<link rel="icon" href="favicon!.ico" type="image/x-icon">-->
-        
+		<link rel="shortcut icon" href="images/favicon.ico">
+		<title>Janna Golden</title>  
 	</head>
 
 	<body>
@@ -16,7 +13,7 @@
 
 		<div class="section group">
 			<div class="navbar">
-				<a class="navbarCurrent" href="index.html" style="font-size: 20px; color:gray; text-decoration: none; font-weight:BOLD">HOME!</a>
+				<a class="navbarCurrent" href="index.html" style="font-size: 20px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
 				<a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD">LINKEDIN</a>
 				<a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 20px; font-weight:BOLD">GITHUB</a>
 				<a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
@@ -44,17 +41,6 @@
 			</div>
 		</div>
 
-		<!--<div class="blur pic">
-			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" alt="Me!" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
-		</div>
-
-		<A HREF="404.html"><IMG src="DSC_1754.jpg" align="middle" border="0" height="228" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
-
-		<A HREF="404.html"><IMG src="pizza.jpg" align="middle" border="0"  height="228" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Pizza"></A>
-		
-		<p style="clear: both;">-->
-
-		<!--<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">-->
 
 		<div class="col span_3_of_3">
 			<h5>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h5>
