--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,8 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
-		
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/>
+		<link rel="shortcut icon" href="images/favicon.ico">
         <title>Janna Golden</title>
 	</head>
 
