--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/>
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="image/favicon.ico">
         <title>Janna Golden</title>
 	</head>
 
@@ -28,7 +28,7 @@
 
 		<div class="person1" style="float:left; display:inline-block; ">
 			<span style="float:left;width:20%; margin-left:10em; padding-bottom:1em">
-				<img src="images/senior.jpg" width="320" height="480" />
+				<img src="image/senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:40%; align: left; margin-right:10em;">
 				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
