--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="image/favicon.ico">
 		<title>Janna Golden</title>  
 	</head>
 
@@ -24,7 +24,7 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="images/jump!.jpg" alt="me!" width="35%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="image/jump!.jpg" alt="me!" width="35%" height="auto" /></a>
 					<h2>•about me•</h2>
 				</div>
 				<br>
@@ -34,7 +34,7 @@
 				</div>
 				<br>-->
 				<div class="col span_1_of_3">
-					<a class="shrink" href="blog.html"><img src="images/roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
+					<a class="shrink" href="blog.html"><img src="image/roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
 					<h4>•travels abroad•</h4>	
 				</div>
 				<br>
