--- a/school.html
+++ b/school.html
@@ -3,7 +3,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="image/favicon.ico">
         <title>Janna Golden</title>
 	</head>
 
