--- a/index.html
+++ b/index.html
@@ -1,4 +1,49 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+<meta charset="UTF-8">
+<title>Janna Golden</title>
+<link rel="shortcut icon" href="image/favicon.ico"/>
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style/css/view.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style/type/marketdeco.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style/type/merriweather.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style/css/queries.css" media="all" />
+<script type="text/javascript" src="style/js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="style/js/ddsmoothmenu.js"></script>
+<script type="text/javascript" src="style/js/html5.js"></script>
+<script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
+<script type="text/javascript" src="style/js/selectnav.js"></script>
+<script type="text/javascript" src="style/js/twitter.min.js"></script>
+</head>
+
+  <body>
+    <div id="page" class="hfeed">
+    <div id="wrapper">
+    <header id="branding" role="banner">
+    <h1>JANNA GOLDEN</h1>
+
+      <div class="section group">
+        <div class="navbar">
+          <a class="navbarCurrent" href="index.html" style="font-size: 20px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
+          <a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD">LINKEDIN</a>
+          <a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 20px; font-weight:BOLD">GITHUB</a>
+          <a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
+        </div>
+      </div>
+    </header>
+  	
+    </div><!-- #wrapper -->
+    </div><!-- #page -->
+
+    <script type="text/javascript" src="style/js/scripts.js"></script>
+    
+  </body>
+</html>
+
+
+
+<!--<html>
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
@@ -28,11 +73,11 @@
 					<h2>•about me•</h2>
 				</div>
 				<br>
-				<!--<div class="col span_1_of_3">
+				<div class="col span_1_of_3">
 					<a class="shrink" href="404.html"><img src="berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
 					<h3>•education and projects•</h3>
 				</div>
-				<br>-->
+				<br>
 				<div class="col span_1_of_3">
 					<a class="shrink" href="blog.html"><img src="image/roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
 					<h4>•travels abroad•</h4>	
@@ -42,10 +87,18 @@
 		</div>
 
 
-		<div class="col span_3_of_3">
-			<h5>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+<footer id="colophon" role="contentinfo">
+		
+		<div id="janna golden">
+			© 2014 Janna Golden | golden.janna@gmail.com
 		</div>
 
+	</footer><! #colophon -->
 
-	</body>
-</html>
+		<!--<div class="col span_3_of_3">
+			<h5>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+		</div>-->
+
+
+	<!--</body>
+</html>-->
