--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <div id="sections">
 			<div class="section group">	
+				<br>
 				<div class="col span_1_of_3">			
 					<a class="shrink" href="aboutme.html"><img src="image/jump!.jpg" alt="me!" width="35%" height="auto" /></a>
 					<h2>•about me•</h2>
@@ -57,6 +58,12 @@
     </div><!-- #page -->
 
     <script type="text/javascript" src="style/js/scripts.js"></script>
+
+    <footer id="colophon" role="contentinfo">
+		<div id="janna golden">
+			© 2014 Janna Golden | golden.janna@gmail.com
+		</div>
+	</footer>
     
   </body>
 </html>
