--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Janna Golden</title>
 <link rel="shortcut icon" href="image/favicon.ico"/>
-<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style/style.css" media="all" />
 <link rel="stylesheet" type="text/css" href="style/css/view.css" media="all" />
 <link rel="stylesheet" type="text/css" href="style/type/marketdeco.css" media="all" />
 <link rel="stylesheet" type="text/css" href="style/type/merriweather.css" media="all" />
