--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
   <body>
-    <div id="page" class="hfeed">
+    <!--<div id="page" class="hfeed">-->
     <div id="wrapper">
     <header id="branding" role="banner">
     <h1>JANNA GOLDEN</h1>
@@ -55,7 +55,7 @@
 		</div>
   	
     </div><!-- #wrapper -->
-    </div><!-- #page -->
+    <!--</div>--><!-- #page -->
 
     <script type="text/javascript" src="style/js/scripts.js"></script>
 
