--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700' rel='stylesheet' type='text/css'>
 <meta charset="UTF-8">
 <title>Janna Golden</title>
 <link rel="shortcut icon" href="image/favicon.ico"/>
@@ -18,7 +19,7 @@
 </head>
 
   <body>
-    <!--<div id="page" class="hfeed">-->
+    <div id="page" class="hfeed">
     <div id="wrapper">
     <header id="branding" role="banner">
     <h1>JANNA GOLDEN</h1>
