--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<br>
 				<div class="col span_1_of_3">			
 					<a class="shrink" href="aboutme.html"><img src="image/jump!.jpg" alt="me!" width="35%" height="auto" /></a>
-					<h2>•about me•</h2>
+					<h2>•ABOUT ME•</h2>
 				</div>
 				<br>
 				<!--<div class="col span_1_of_3">
@@ -49,7 +49,7 @@
 				<br>-->
 				<div class="col span_1_of_3">
 					<a class="shrink" href="blog.html"><img src="image/roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
-					<h4>•travels abroad•</h4>	
+					<h4>•TRAVELS ABROAD•</h4>	
 				</div>
 				<br>
 			</div>
