--- a/index.html
+++ b/index.html
@@ -54,17 +54,20 @@
 				<br>
 			</div>
 		</div>
+		<div id="janna golden">
+			© 2014 Janna Golden | golden.janna@gmail.com
+		</div>
   	
     </div><!-- #wrapper -->
     <!--</div>--><!-- #page -->
 
     <script type="text/javascript" src="style/js/scripts.js"></script>
 
-    <footer id="colophon" role="contentinfo">
+    <!--<footer id="colophon" role="contentinfo">
 		<div id="janna golden">
 			© 2014 Janna Golden | golden.janna@gmail.com
 		</div>
-	</footer>
+	</footer>-->
     
   </body>
 </html>
