--- a/aboutme.html
+++ b/aboutme.html
@@ -29,9 +29,9 @@
 
       <div class="section group">
         <div class="navbar">
-          <a class="navbarCurrent" href="index.html" style="font-size: 22px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
-          <a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD">LINKEDIN</a>
-          <a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 22px; font-weight:BOLD">GITHUB</a>
+          <a class="navbarCurrent" href="index.html" style="font-size: 22px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a><span class="delimiter">|</span>
+          <a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD">LINKEDIN</a><span class="delimiter">|</span>
+          <a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 22px; font-weight:BOLD">GITHUB</a><span class="delimiter">|</span>
           <a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
         </div>
       </div>
@@ -59,6 +59,22 @@
     <!-- .entry-content -->
     
   </article>
+
+  </div><!-- #content -->
+</div><!-- #primary -->
+
+
+</div><!-- #main -->
+
+<div id="janna golden">
+	© 2014 Janna Golden | golden.janna@gmail.com
+</div>
+
+</div>
+
+<script type="text/javascript" src="style/js/scripts.js"></script>
+</body>
+</html>
   <!-- end article -->
 <!--<body>
 	<link rel="stylesheet" href="styleaboutme.css">
@@ -99,8 +115,8 @@
 
 		<div class="col span_3_of_3">
 			<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
-		</div>-->
+		</div>
 
 
 </body>
-</html>
+</html>-->
