--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="shortcut icon" href="style/images/favicon.png"/>
-		<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="style/style.css" media="all" />
 		<link rel="stylesheet" type="text/css" href="style/css/view.css" media="all" />
 		<link rel="stylesheet" type="text/css" href="style/type/marketdeco.css" media="all" />
 		<link rel="stylesheet" type="text/css" href="style/type/merriweather.css" media="all" />
@@ -17,7 +16,6 @@
 		<script type="text/javascript" src="style/js/html5.js"></script>
 		<script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
 		<script type="text/javascript" src="style/js/selectnav.js"></script>
-		<script type="text/javascript" src="style/js/twitter.min.js"></script>
 	</head>
 
 
