--- a/aboutme.html
+++ b/aboutme.html
@@ -48,13 +48,13 @@
 	    </div>
 		<div class="two-third last">
 			<br>
-			<pre><span style="background=white; text-align=right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
+			<pre><span style="background=white; text-align=left; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
 			Currently listening to: alt-J
 			Currently drinking: Americano</span></pre>
 			<br>
 			<!--<p style="text-align=right">Currently listening to: alt-J</p>
 			<p style="text-align=right">Currently drinking: Americano</p>-->
-			<p style="text-align=right; font-weight=bold">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)<br />
+			<p style="text-align=right; font-weight=BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)<br />
 			<span style="display:block; height:20px;"></span></p>
 		</div>
 		<div class="clear"></div>
