--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@
     		<p><img src="image/senior.jpg" alt="aboutme" class="aligncenter" />
 	    </div>
 		<div class="two-third last">
-			<pre><span style="background=white; float=left; font-family: 'Open Sans', sans-serif; display:block; font-size: 15px">
+			<pre><span style="display:block; font-size: 15px">
 			Currently listening to: alt-J
 			Currently drinking: Americano</span></pre>
 			<br>
