--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,21 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<link rel="stylesheet" type="text/css" href="style/style.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="style/css/view.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="style/type/marketdeco.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="style/type/merriweather.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="style/css/queries.css" media="all" />
 		<link rel="shortcut icon" href="image/favicon.ico">
         <title>Janna Golden</title>
+        <script type="text/javascript" src="style/js/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="style/js/ddsmoothmenu.js"></script>
+		<script type="text/javascript" src="style/js/html5.js"></script>
+		<script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
+		<script type="text/javascript" src="style/js/selectnav.js"></script>
 	</head>
 
 	<body>
