--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,9 @@
 	</head>
 
 	<body>
-		<link rel="stylesheet" href="styleblog.css">
+		<div id="page" class="hfeed">
+    	<div id="wrapper">
+    	<header id="branding" role="banner">
 		<h1>JANNA GOLDEN</h1>
 
 		<div class="section group">
@@ -31,7 +33,7 @@
 			</div>
 		</div>
 
-		<h2>Travels Abroad</h2>
+		<!--<h2>Travels Abroad</h2>
 		<br>
 		<HR COLOR = "gray" WIDTH="80%">
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
@@ -47,7 +49,7 @@
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Coffee on the go is NOT a thing here although a few places advertise "American Coffe To-Go" so I've had to get used to downing a quick caffè (espresso shot) or caffè americano (much smaller version of my usual americano)</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Long walks on cobblestone streets cause pain in all parts of your body (especially feet)</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• You will stumble upon ruins during nearly any given walk</p>
-			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Gelato is not the same everywhere!</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Gelato is not the same everywhere!</p>-->
 
 			<!---<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
 				<img src="forblog/long.jpg" width="100%" height="auto" alt="passport"/>
@@ -421,19 +423,25 @@
 
 </div>--><!-- #main -->
 
+</div><!-- #content -->
+</div><!-- #primary -->
 
-<footer id="colophon" role="contentinfo">
-		
-		<div id="janna golden">
-			© 2014 Janna Golden | golden.janna@gmail.com
-		</div>
 
-	</footer><!-- #colophon -->
+</div><!-- #main -->
+
+<div id="janna golden">
+	© 2014 Janna Golden | golden.janna@gmail.com
+</div>
+
+</div>
+
+<script type="text/javascript" src="style/js/scripts.js"></script>
+</body>
+</html>
+
+
 
 <!--<div class="col span_3_of_3">
 	<h4>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h4>
 </div>-->
 
-
-</body>
-</html>
