--- a/blog.html
+++ b/blog.html
@@ -213,39 +213,63 @@
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="style/images/art/gallery5-full.jpg" class="view" rel="gallery" title="Drop Your Mask">
+	      		<a href="forblog/long-5.jpg" class="view" rel="gallery" title="Drop Your Mask">
 	      			<span class="overlay zoom"></span>
-	      			<img src="style/images/art/gallery5.jpg" alt=""/>
+	      			<img src="forblog/long-5.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="style/images/art/gallery6-full.jpg" class="view" rel="gallery" title="The Smoke Will Lead">
+	      		<a href="forblog/long-6.jpg" class="view" rel="gallery" title="The Smoke Will Lead">
 	      			<span class="overlay zoom"></span>
-	      			<img src="style/images/art/gallery6.jpg" alt=""/>
+	      			<img src="forblog/long-6.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="style/images/art/gallery7-full.jpg" class="view" rel="gallery" title="I Have to Go on a Diet">
+	      		<a href="forblog/long-7.jpg" class="view" rel="gallery" title="I Have to Go on a Diet">
 	      			<span class="overlay zoom"></span>
-	      			<img src="style/images/art/gallery7.jpg" alt=""/>
+	      			<img src="forblog/long-7.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="style/images/art/gallery8-full.jpg" class="view" rel="gallery" title="Heartbeats Slow">
+	      		<a href="forblog/long-8.jpg" class="view" rel="gallery" title="Heartbeats Slow">
 	      			<span class="overlay zoom"></span>
-	      			<img src="style/images/art/gallery8.jpg" alt=""/>
+	      			<img src="forblog/long-8.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="style/images/art/gallery9-full.jpg" class="view" rel="gallery" title="Every Little Thing">
+	      		<a href="forblog/long-9.jpg" class="view" rel="gallery" title="Every Little Thing">
 	      			<span class="overlay zoom"></span>
-	      			<img src="style/images/art/gallery9.jpg" alt=""/>
+	      			<img src="forblog/long-9.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="style/images/art/gallery10-full.jpg" class="view" rel="gallery" title="Another Word for Desperate">
+	      		<a href="forblog/long-10.jpg" class="view" rel="gallery" title="Another Word for Desperate">
 	      			<span class="overlay zoom"></span>
-	      			<img src="style/images/art/gallery10.jpg" alt=""/>
+	      			<img src="forblog/long-10.jpg" alt=""/>
+	      		</a>
+	      	</li>
+	      	<li class="item">
+	      		<a href="forblog/long-11.jpg" class="view" rel="gallery" title="Every Little Thing">
+	      			<span class="overlay zoom"></span>
+	      			<img src="forblog/long-11.jpg" alt=""/>
+	      		</a>
+	      	</li>
+	      	<li class="item">
+	      		<a href="forblog/long-12.jpg" class="view" rel="gallery" title="Every Little Thing">
+	      			<span class="overlay zoom"></span>
+	      			<img src="forblog/long-12.jpg" alt=""/>
+	      		</a>
+	      	</li>
+	      	<li class="item">
+	      		<a href="forblog/long-13.jpg" class="view" rel="gallery" title="Every Little Thing">
+	      			<span class="overlay zoom"></span>
+	      			<img src="forblog/long-13.jpg" alt=""/>
+	      		</a>
+	      	</li>
+	      	<li class="item">
+	      		<a href="forblog/long-14.jpg" class="view" rel="gallery" title="Every Little Thing">
+	      			<span class="overlay zoom"></span>
+	      			<img src="forblog/long-14.jpg" alt=""/>
 	      		</a>
 	      	</li>
       	</ul>
