--- a/blog.html
+++ b/blog.html
@@ -230,12 +230,12 @@
 	      			<img src="forblog/long-7.jpg" alt=""/>
 	      		</a>
 	      	</li>
-	      	<li class="item">
+	      	<!--<li class="item">
 	      		<a href="forblog/long-8.jpg" class="view" rel="gallery" title="Heartbeats Slow">
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/long-8.jpg" alt=""/>
 	      		</a>
-	      	</li>
+	      	</li>-->
 	      	<li class="item">
 	      		<a href="forblog/long-9.jpg" class="view" rel="gallery" title="Every Little Thing">
 	      			<span class="overlay zoom"></span>
@@ -260,7 +260,7 @@
 	      			<img src="forblog/long-12.jpg" alt=""/>
 	      		</a>
 	      	</li>
-	      	<li class="item">
+	      	<!--<li class="item">
 	      		<a href="forblog/long-13.jpg" class="view" rel="gallery" title="Every Little Thing">
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/long-13.jpg" alt=""/>
@@ -271,7 +271,7 @@
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/long-14.jpg" alt=""/>
 	      		</a>
-	      	</li>
+	      	</li>-->
       	</ul>
 		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of my first 11 days in my home for the next four months.</p>
 	
