--- a/blog.html
+++ b/blog.html
@@ -164,7 +164,7 @@
   </article>-->
   <!-- end article -->
 
-<HR COLOR = "gray" WIDTH="80%">
+<hr WIDTH="80%">
     <!-- begin article -->
   <p>&nbsp</p>
   <article class="post hentry format-gallery">
