--- a/blog.html
+++ b/blog.html
@@ -313,12 +313,12 @@
 	      			<img src="forblog/width-7.jpg" alt=""/>
 	      		</a>
 	      	</li>
-	      	<li class="item">
+	      	<!--<li class="item">
 	      		<a href="forblog/width-8.jpg" class="view" rel="gallery" title="Pasta">
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/width-8.jpg" alt=""/>
 	      		</a>
-	      	</li>
+	      	</li>-->
 	      	<li class="item">
 	      		<a href="forblog/width-9.jpg" class="view" rel="gallery" title="Pasta">
 	      			<span class="overlay zoom"></span>
