--- a/blog.html
+++ b/blog.html
@@ -189,12 +189,13 @@
 			<p>
 				• I arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)!
 				• We live in Trastevere and school is across the river so we get to look at the beautiful (see below) view of the Tiber everyday
-				• Baroque walking tour with one of our professors (we learned about two piazzas)
-				• Visits to the Pantheon (a six minute walk from my school), Spanish Steps, Piazza Navona, Trevi Fountain (currently under rennovation), Vatican Museums, and St. Peter's Basillica, farmer's markets 
-				• An Italian cooking class (we made fresh pasta)
+				• We went on a Baroque walking tour with one of our professors (we learned about two piazzas)
+				• Visits to the Pantheon (a six minute walk from my school), Spanish Steps, Piazza Navona, Trevi Fountain (currently under rennovation), Vatican Museums, and St. Peter's Basillica
+				• We took an Italian cooking class where we made fresh pasta, pesto, Carbonara, potatoes, cauliflower, and bruschetta
 				• Lots of pizza lunches and dinners and gelato
 				• Coffee on the go is NOT a thing here although a few places advertise "American Coffe To-Go" so I've had to get used to downing a quick caffè (espresso shot) or caffè americano (much smaller version of my usual americano)
 				• Long walks on cobblestone streets cause pain in all parts of your body (especially feet)
+				• Farmer's Markets are extremely cheap here and have the best food
 				• You will stumble upon ruins during nearly any given walk
 				• Gelato is not the same everywhere!</p>
     
