--- a/blog.html
+++ b/blog.html
@@ -185,7 +185,7 @@
     </header>
     <!-- .entry-header -->
 
-    <p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of activities I've done and things I've learned during my first 11 days in my home for the next four months.</p>
+    <p>After a week and a half in Rome, I finally have time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of activities I've done and things I've learned during my first 11 days in my home for the next four months.</p>
 			<p>
 				• I arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)!
 				• We live in Trastevere and school is across the river so we get to look at the beautiful (see below) view of the Tiber everyday
