--- a/blog.html
+++ b/blog.html
@@ -188,7 +188,7 @@
     <p>After a week and a half in Rome, I finally have time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of activities I've done and things I've learned during my first 11 days in my home for the next four months.</p>
 			<p>
 				• I arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)!
-				• We live in Trastevere and school is across the river so we get to look at the beautiful (see below) view of the Tiber everyday
+				• We live in Trastevere and school is across the river so we get to look at the beautiful view of the Tiber everyday (see below)
 				• We went on a Baroque walking tour with one of our professors (we learned about two piazzas)
 				• Visits to the Pantheon (a six minute walk from my school), Spanish Steps, Piazza Navona, Trevi Fountain (currently under rennovation), Vatican Museums, and St. Peter's Basillica
 				• We took an Italian cooking class where we made fresh pasta, pesto, Carbonara, potatoes, cauliflower, and bruschetta
