--- a/aboutme.html
+++ b/aboutme.html
@@ -69,7 +69,7 @@
 </div><!-- #main -->
 
 <div id="janna golden">
-	© 2014 Janna Golden | golden.janna@gmail.com
+	2014 Janna Golden | golden.janna@gmail.com
 </div>
 
 </div>
