--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 					<h2>•ABOUT ME•</h2>
 				</div>
 				<br>
-				<!--<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
+				<div class="col span_1_of_3">
+					<a class="shrink" href="projects.html"><img src="berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
 					<h3>•education and projects•</h3>
 				</div>
-				<br>-->
+				<br>
 				<div class="col span_1_of_3">
 					<a class="shrink" href="blog.html"><img src="image/roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
 					<h4>•TRAVELS ABROAD•</h4>	
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div id="janna golden">
-			© 2014 Janna Golden | golden.janna@gmail.com
+			2014 Janna Golden | golden.janna@gmail.com
 		</div>
   	
     </div><!-- #wrapper -->
