--- a/school.html
+++ b/school.html
@@ -1,28 +1,46 @@
-<html>
-	<head>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
-		<link rel="shortcut icon" href="image/favicon.ico">
-        <title>Janna Golden</title>
-	</head>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700' rel='stylesheet' type='text/css'>
+	<meta charset="UTF-8">
+	<title>Janna Golden</title>
+	<link rel="shortcut icon" href="image/favicon.ico"/>
+	<link rel="stylesheet" type="text/css" href="style/style.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="style/css/view.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="style/type/marketdeco.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="style/type/merriweather.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="style/css/queries.css" media="all" />
+	<script type="text/javascript" src="style/js/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="style/js/ddsmoothmenu.js"></script>
+	<script type="text/javascript" src="style/js/html5.js"></script>
+	<script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
+	<script type="text/javascript" src="style/js/selectnav.js"></script>
+	<script type="text/javascript" src="style/js/twitter.min.js"></script>
+</head>
 
 	<body>
-		<link rel="stylesheet" href="schoolstyle.css">
-		<h1>JANNA GOLDEN</h1>
+		<div id="page" class="hfeed">
+    	<div id="wrapper">
+    	<header id="branding" role="banner">
+	    	<h1>JANNA GOLDEN</h1>
+	      	<div class="section group">
+		        <div class="navbar">
+		          <a class="navbarCurrent" href="index.html" style="font-size: 22px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
+		          <a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD">LINKEDIN</a>
+		          <a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 22px; font-weight:BOLD">GITHUB</a>
+		          <a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
+		        </div>
+		      </div>
+	    </header>
 
-		<div class="section group">
-			<div class="navbar">
-				<a class="navbarCurrent" href="index.html" style="font-size: 20px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
-				<a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD">LINKEDIN</a>
-				<a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 20px; font-weight:BOLD">GITHUB</a>
-				<a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
-			</div>
-		</div>
+	<div id="janna golden">
+		2014 Janna Golden | golden.janna@gmail.com
+	</div>
+  	
+    </div><!-- #wrapper -->
+    <!--</div>--><!-- #page -->
 
-	<div class="col span_3_of_3">
-			<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
-		</div>
+    <script type="text/javascript" src="style/js/scripts.js"></script>
 
 
 </body>
