--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="projects.html"><img src="berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
-					<h3>•education and projects•</h3>
+					<a class="shrink" href="projects.html"><img src="image/berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
+					<h3>•PROJECTS•</h3>
 				</div>
 				<br>
 				<div class="col span_1_of_3">
