--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="page" class="hfeed">
     <div id="wrapper">
     <header id="branding" role="banner">
-    <h1>JANNA GOLDEN!</h1>
+    <h1>JANNA GOLDEN</h1>
 
       <div class="section group">
         <div class="navbar">
