--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,10 @@
 	    </div>
 		<div class="two-third last">
 			<br>
-			<p>Currently listening to: alt-J • Currently drinking: Americano</p>
+			<ul>
+				<li>Currently listening to: alt-J</li>
+				<li>Currently drinking: Americano</li>
+			</ul>
 			<!--<p style="text-align=right">Currently listening to: alt-J</p>
 			<p style="text-align=right">Currently drinking: Americano</p>-->
 			<p style="text-align=right">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)<br />
