--- a/Favorites.html
+++ b/Favorites.html
@@ -43,6 +43,14 @@
 <div id="primary">
   <div id="content" role="main">
 
+  	<p>One of the best parts of traveling is trying new foods and restaurants, so I thought I'd share some of my favorites of the semester! I'm in Italy so naturally Pizza and Gelato get their own categories.</p>
+  	<h7 style="font-size: 18px">Pizza</h7>  
+  		<h8 style="font-size: 15">Dar Poeta</h8>
+  		<p>Home of the Nutella Calzone and Vicoletto Pizza (Pesto and Potatoes)</p>
+  	<h7 style="font-size: 15px">Gelato</h7>
+  		<h8 style="font-size: 15">Dar Poeta</h8>
+  	<h7 style="font-size: 15px">Everything Else</h7>
+
 </div><!-- #content -->
 </div><!-- #primary -->
 
