--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="section group">	
 				<br>
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="image/jump!.jpg" alt="me!" width="35%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="image/colosseum.jpg" alt="me" width="35%" height="auto" /></a>
 					<h2>•ABOUT ME•</h2>
 				</div>
 				<br>
