--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
 			</ul>
 			<!--<p style="text-align=right">Currently listening to: alt-J</p>
 			<p style="text-align=right">Currently drinking: Americano</p>-->
-			<p style="text-align=right">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)<br />
+			<p style="text-align=right">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD">here</a>)<br />
 			<span style="display:block; height:20px;"></span></p>
 		</div>
 		<div class="clear"></div>
