--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
 
 <a href="Favorites.html" style="text-decoration: none; font-size: 15px; color:gray; font-weight:BOLD">favorites</a>
 <span class="sep"> | </span>
-<a href="Favorites.html" style="text-decoration: none; font-size: 15px; color:gray; font-weight:BOLD">gallery</a>
+<a href="gallery.html" style="text-decoration: none; font-size: 15px; color:gray; font-weight:BOLD">gallery</a>
 
 <div id="main">
 
