--- a/Favorites.html
+++ b/Favorites.html
@@ -44,13 +44,13 @@
   <div id="content" role="main">
 
   	<p>One of the best parts of traveling is trying new foods and restaurants, so I thought I'd share some of my favorites of the semester! I'm in Italy so naturally Pizza and Gelato get their own categories.</p>
-  	<h7 style="font-size: 20px; text-align:left">Pizza</h7>
+  	<h7 style="font-size: 20px">Pizza</h7>
   	<br> 
-  		<h8 style="font-size: 18; text-align:left">Dar Poeta</h8>
-  		<p style="font-size: 15px; text-align:left">Home of the Nutella Calzone and Vicoletto Pizza (Pesto and Potatoes)</p>
-  	<h7 style="font-size: 20px; text-align:left">Gelato</h7>
+  		<h8 style="font-size: 17px">Dar Poeta</h8>
+  		<p style="font-size: 15px">Home of the Nutella Calzone and Vicoletto Pizza (Pesto and Potatoes)</p>
+  	<h7 style="font-size: 20px">Gelato</h7>
   	<br>
-  		<h8 style="font-size: 18px; text-align:left">Fattamorgana</h8>
+  		<h8 style="font-size: 17px">Fattamorgana</h8>
   	<br>
   	<h7 style="font-size: 20px; text-align:left">Everything Else</h7>
 
